# Android-

./: .gitignore  .gitmodules  README.md  keystore.jks  settings.gradle.kts
.github/workflows/: ci.yml  docker.yaml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/ru/data/: IApiService.kt  api_manager.kt  models.kt  СApiManager.kt  СApiService.kt
app/src/main/res/drawable/: btn_rounded.xml
app/src/main/res/layout/: activity_game.xml  activity_main.xml  activity_record_table.xml  table_row_template.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
server/pg_service/: CMakeLists.txt  Makefile  docker-compose.yml
server/pg_service/.github/workflows/: ci.yml  docker.yaml
server/pg_service/configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
server/pg_service/docs/api/: api.yaml
server/pg_service/postgresql/data/: initial_data.sql  test_data.sql
server/pg_service/postgresql/schemas/: db_1.sql
server/pg_service/src/: main.cpp
server/pg_service/src/db/: queries.cpp  queries.hpp  repository.cpp  repository.hpp
server/pg_service/src/models/: game.hpp
server/pg_service/src/utils/: parsers.cpp  parsers.hpp
server/pg_service/src/views/scores/get/: view.cpp  view.hpp
server/pg_service/src/views/scores/upload/post/: view.cpp  view.hpp
server/pg_service/src/views/user_rank/get/: view.cpp  view.hpp
server/pg_service/tests/: test_get_scores.py  test_get_user_rank.py  test_upload_scores.py
(+32 files in other folders)
